// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should \`labelAlign\` work in FormItem 1`] = `
<div
  class="ant-row ant-form-item"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left"
  >
    <label
      class=""
      title="test"
    >
      test
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control-wrapper"
  >
    <div
      class="ant-form-item-control"
    >
      <span
        class="ant-form-item-children"
      />
    </div>
  </div>
</div>
`;

exports[`Form should \`labelAlign\` work in FormItem 2`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-form-item-label-left"
    >
      <label
        class=""
        title="test"
      >
        test
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Form should props colon of Form.Item override the props colon of Form. 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class="ant-form-item-no-colon"
        title="label"
      >
        label
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          input
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class=""
        title="label"
      >
        label
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          input
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class="ant-form-item-no-colon"
        title="label"
      >
        label
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          input
        </span>
      </div>
    </div>
  </div>
</form>
`;
